[RetroFunding API] Validate payload schemas (#307)
* add vote validator

* move validators under try catch

* validate ballot payloads

* update ballot submission schema

* update swagger schema

* add multiplier validation

* fix multiplier validator

* fix swagger schema
