# src/app/api/v1/retrofunding/rounds/[roundId]/ballots/[ballotCasterAddressOrEns]/submit/route.ts
@@ -2,6 +2,20 @@ import { NextResponse, type NextRequest } from "next/server";
 import { authenticateApiUser } from "@/app/lib/auth/serverAuth";
 import { traceWithUserId } from "@/app/api/v1/apiUtils";
 import { submitBallot } from "@/app/api/common/ballots/submitBallot";
+import { z } from "zod";
+
+const ballotContentSchema = z.object({
+  allocations: z.array(z.record(z.string(), z.number())),
+  os_only: z.boolean(),
+  os_multiplier: z.number(),
+});
+
+const ballotSubmissionSchema = z.object({
+  ballotContnet: ballotContentSchema,
+  signature: z.string().regex(/^0x[a-fA-F0-9]{130}$/),
+});
+
+export type BallotSubmission = z.infer<typeof ballotSubmissionSchema>;
 
 export async function POST(
   request: NextRequest,
@@ -16,8 +30,11 @@ export async function POST(
   return await traceWithUserId(authResponse.userId as string, async () => {
     const { roundId, ballotCasterAddressOrEns } = route.params;
     try {
+      const payload = await request.json();
+      const parsedPayload = ballotSubmissionSchema.parse(payload);
+
       const ballot = await submitBallot(
-        await request.json(),
+        parsedPayload,
         Number(roundId),
         ballotCasterAddressOrEns
       );
